--- a/app/assets/stylesheets/framework_and_overrides.css.scss
+++ b/app/assets/stylesheets/framework_and_overrides.css.scss
@@ -1,6 +1,7 @@
 // import the CSS framework
 @import "bootstrap";
 
+
 // make all images responsive by default
 img {
   @extend .img-responsive;
@@ -37,7 +38,7 @@ main {
   background-color: #eee;
   padding-bottom: 80px;
   width: 100%;
-  margin-top: 51px; // accommodate the navbar
+  //margin-top: 51px; // accommodate the navbar
   }
 section {
   @extend .row;
