--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,4 +1,44 @@
-<h3>Home</h3>
-<% @users.each do |user| %>
-  <p>User: <%=link_to user.email, user %></p>
+<% content_for :head do %>
+ <%= javascript_include_tag 'homemap' %>
+ <%= javascript_include_tag 'topojson.v1.min' %>
 <% end %>
+
+<div id="crossoverlay"></div>
+<div id="boxoverlay"></div>
+<div id="map-canvas"/>
+
+<!-- script -->
+<script type="text/javascript">
+	var map;
+	function initialize() {
+		var mapStyle = [ { "elementType": "geometry", "stylers": [ { "saturation": -100 } ] },{ "elementType": "labels", "stylers": [ { "saturation": 1 } ] } ];
+		var myLatlng = new google.maps.LatLng(-25.363882,131.044922);
+
+		var mapOptions = {
+			zoom: 3,
+			disableDefaultUI: true,
+			center: myLatlng,
+			styles: mapStyle
+		};
+
+		var map = new google.maps.Map(document.getElementById('map-canvas'),
+			mapOptions);
+		// To add the marker to the map, use the 'map' property
+		var marker = new google.maps.Marker({
+		    position: myLatlng,
+		    map: map,
+		    title:"Hello World!"
+		});
+	}
+
+	function loadScript() {
+		var script = document.createElement('script');
+		script.type = 'text/javascript';
+		script.src = 'https://maps.googleapis.com/maps/api/js?v=3.exp&key=AIzaSyDQLZ-U3WnaDM6IoWVrM90P9sFswn2xbVg&sensor=false&' +
+		'callback=initialize';
+		document.body.appendChild(script);
+	}
+
+	window.onload = loadScript;
+
+</script>
