--- a/app/views/layouts/_navigation_links.html.erb
+++ b/app/views/layouts/_navigation_links.html.erb
@@ -1,5 +1,5 @@
 <%# add navigation links to this file %>
-<% if user_signed_in? %>
+<!--<% if user_signed_in? %>
   <li><%= link_to 'Logout', destroy_user_session_path, :method=>'delete' %></li>
 <% else %>
   <li><%= link_to 'Login', new_user_session_path %></li>
@@ -12,3 +12,10 @@
 <% if user_signed_in? %>
   <li><%= link_to 'Users', users_path %></li>
 <% end %>
+<% if user_signed_in? %>
+    <li><%= link_to 'Posts', posts_path %></li>
+<% end %>-->
+
+<li><%= link_to 'News', posts_path %></li>
+<li><%= link_to 'New post', new_post_path %></li>
+<li><%= link_to 'My posts', new_post_path %></li>
