--- a/app/views/layouts/_navigation_links.html.erb
+++ b/app/views/layouts/_navigation_links.html.erb
@@ -18,4 +18,4 @@
 
 <li><%= link_to 'News', posts_path %></li>
 <li><%= link_to 'New post', new_post_path %></li>
-<li><%= link_to 'My posts', new_post_path %></li>
+<li><%= link_to 'My posts', posts_my_path %></li>
