--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -1,25 +1,8 @@
-<h1>Listing posts</h1>
-
-<table>
-  <thead>
-    <tr>
-      <th colspan="3"></th>
-    </tr>
-  </thead>
-
-  <tbody>
-  <%= render 'layouts/messages' %>
-    <% @posts.each do |post| %>
-      <tr>
-        <td><%= post.post_content %></td>
-        <td><%= link_to 'Show', post %></td>
-        <td><%= link_to 'Edit', edit_post_path(post) %></td>
-        <td><%= link_to 'Destroy', post, method: :delete, data: { confirm: 'Are you sure?' } %></td>
-      </tr>
-    <% end %>
-  </tbody>
-</table>
-
-<br>
-
-<%= link_to 'New Post', new_post_path %>
+<% @posts.each do |post| %>
+<div class="postwrapper">
+  <div class="sectiontitle">Title</div>
+  <div class="sectionwrapper"><%= post.post_content %></div>
+  <div class="sectiontitle">Data</div>
+  <div class="sectionwrapper"><%= post.test_result_cholera_o1 %></div>
+</div>
+<% end %>
