--- a/app/views/posts/_form.html.erb
+++ b/app/views/posts/_form.html.erb
@@ -1,29 +1,89 @@
 <%= form_for @post, :url => posts_path,:html => { :multipart => true } do |f| %>
+
     <% if @post.errors.any? %>
-        <div id="errorExplanation">
-          <h2><%= pluralize(@post.errors.count, "error") %> prohibited this post from being saved:</h2>
-          <ul>
-            <% @post.errors.full_messages.each do |msg| %>
-                <li><%= msg %></li>
-            <% end %>
-          </ul>
+        <div class="sectionwrapper errorbox">
+          <div id="errorExplanation">
+            <div class="title"><%= pluralize(@post.errors.count, "error") %> prohibited this post from being saved:
+            </div>
+            <ul>
+              <% @post.errors.full_messages.each do |msg| %>
+                  <li><%= msg %></li>
+              <% end %>
+            </ul>
+          </div>
         </div>
     <% end %>
 
-    <%= f.text_area :post_content%>
-    
 
-    Images:
-    <% @post.images.each do |image| %>
-        <%= image_tag image.file.url %>
-    <% end %>
+    <div class="sectiontitle">Your story</div>
+    <div class="inputwrapper sectionwrapper">
+        <%= f.text_area :post_content%>
+    </div>
 
-    <%= f.fields_for :images do |i| %>
-        <% if i.object.new_record? %>
-            <%= i.file_field :file , :multiple => true%>
+    <div class="sectiontitle">Test results</div>
+    <div class="sectionwrapper">
+      <div class="testresultbox">
+        <div class="testtitleimg mid"><%= image_tag("cholera.png") %></div>
+        <div id="o1group">
+          <div id="cholerao1positive"><%= f.radio_button :test_result_cholera_o1, "2" %></div>
+          <div id="cholerao1negative"><%= f.radio_button :test_result_cholera_o1, "1" %></div>
+          <div id="cholerao1noresult"><%= f.radio_button :test_result_cholera_o1, "0" %></div>
+        </div>
+        <div id="o139group">
+          <div id="cholerao139positive"><%= f.radio_button :test_result_cholera_o139, "2" %></div>
+          <div id="cholerao139negative"><%= f.radio_button :test_result_cholera_o139, "1" %></div>
+          <div id="cholerao139noresult"><%= f.radio_button :test_result_cholera_o139, "0" %></div>
+        </div>
+      </div>
+      <div class="testresultbox">
+        <div class="testtitleimg mid"><%= image_tag("nitrite.png") %></div>
+        <div class="choicegroup">
+            <div class="choicebox" id="nitrite6"><%= f.radio_button :test_result_nitrite, "6" %></div>
+            <div class="choicebox" id="nitrite5"><%= f.radio_button :test_result_nitrite, "5" %></div>
+            <div class="choicebox" id="nitrite4"><%= f.radio_button :test_result_nitrite, "4" %></div>
+            <div class="choicebox" id="nitrite3"><%= f.radio_button :test_result_nitrite, "3" %></div>
+            <div class="choicebox" id="nitrite2"><%= f.radio_button :test_result_nitrite, "2" %></div>
+            <div class="choicebox" id="nitrite1"><%= f.radio_button :test_result_nitrite, "1" %></div>
+        </div>
+      </div>
+    </div>
+    <div class="sectionwrapper">
+      <div class="testresultbox">
+        <div class="testtitleimg mid"><%= image_tag("coliform.png") %></div>
+        <div class="coliformbox" id="coliformblue"><%= f.radio_button :test_result_coliform, "2" %></div>
+        <div class="coliformbox" id="coliformyellow"><%= f.radio_button :test_result_coliform, "1" %></div>
+        <div class="coliformbox" id="coliformnone"><%= f.radio_button :test_result_coliform, "0" %></div>
+      </div>
+      <div class="testresultbox">
+        <div class="testtitleimg mid"><%= image_tag("arsenic.png") %></div>
+        <div class="choicebox" id="arsenic6"><%= f.radio_button :test_result_arsenic, "6" %></div>
+        <div class="choicebox" id="arsenic5"><%= f.radio_button :test_result_arsenic, "5" %></div>
+        <div class="choicebox" id="arsenic4"><%= f.radio_button :test_result_arsenic, "4" %></div>
+        <div class="choicebox" id="arsenic3"><%= f.radio_button :test_result_arsenic, "3" %></div>
+        <div class="choicebox" id="arsenic2"><%= f.radio_button :test_result_arsenic, "2" %></div>
+        <div class="choicebox" id="arsenic1"><%= f.radio_button :test_result_arsenic, "1" %></div>
+      </div>
+    </div>
+
+
+    <div class="sectiontitle">Images</div>
+
+    <div class="sectionwrapper">
+        <%= f.fields_for :images do |i| %>
+            <% if i.object.new_record? %>
+                <%= i.file_field :file , :multiple => true%>
+            <% else %>
+              <div class="imagescontainer sectionwrapper">
+                  <% @post.images.each do |image| %>
+                      <%= image_tag image.file.url %>
+                  <% end %>
+              </div>
+
+            <% end %>
         <% end %>
-    <% end %>
+    </div>
 
-
-    <%= f.button :submit %>
-<% end %>S
+    <div class="mid submitwrapper">
+        <%= f.submit "Submit" %>
+    </div>
+<% end %>
