--- a/app/views/posts/new.html.erb
+++ b/app/views/posts/new.html.erb
@@ -1,6 +1,5 @@
 <%= render 'layouts/messages' %>
-<h1>New post for <%= @post.user.email%></h1>
 
 <%= render 'form' %>
 
-<%= link_to 'Back', posts_path %>
+<div class="title">New post for <%= @post.user.email%></div>
