--- a/app/views/posts/_form.html.erb
+++ b/app/views/posts/_form.html.erb
@@ -25,14 +25,14 @@
       <div class="testresultbox">
         <div class="testtitleimg mid"><%= image_tag("cholera.png") %></div>
         <div id="o1group">
-          <div id="cholerao1positive"><%= f.radio_button :test_result_cholera_o1, "2" %></div>
-          <div id="cholerao1negative"><%= f.radio_button :test_result_cholera_o1, "1" %></div>
-          <div id="cholerao1noresult"><%= f.radio_button :test_result_cholera_o1, "0" %></div>
+          <label><div id="cholerao1positive"><%= f.radio_button :test_result_cholera_o1, "2" %></div></label>
+          <label><div id="cholerao1negative"><%= f.radio_button :test_result_cholera_o1, "1" %></div></label>
+          <label><div id="cholerao1noresult"><%= f.radio_button :test_result_cholera_o1, "0" %></div></label>
         </div>
         <div id="o139group">
-          <div id="cholerao139positive"><%= f.radio_button :test_result_cholera_o139, "2" %></div>
-          <div id="cholerao139negative"><%= f.radio_button :test_result_cholera_o139, "1" %></div>
-          <div id="cholerao139noresult"><%= f.radio_button :test_result_cholera_o139, "0" %></div>
+          <label><div id="cholerao139positive"><%= f.radio_button :test_result_cholera_o139, "2" %></div></label>
+          <label><div id="cholerao139negative"><%= f.radio_button :test_result_cholera_o139, "1" %></div></label>
+          <label><div id="cholerao139noresult"><%= f.radio_button :test_result_cholera_o139, "0" %></div></label>
         </div>
       </div>
       <div class="testresultbox">
