--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -2,15 +2,25 @@
   <% @posts.each do |post| %>
       <div class="section">
         <div class="postwrapper">
-          <div class="sectiontitle">Title</div>
-          <div class="sectionwrapper"><%= post.post_content %></div>
-          <div class="sectiontitle">Data</div>
           <div class="sectionwrapper">
-            <div class="datacontainer" id="container_cholera_o1"><%= post.test_result_cholera_o1%></div>
-            <div class="datacontainer" id="container_cholera_o139"><%= post.test_result_cholera_o139 %></div>
-            <div class="datacontainer" id="container_nitrite"><%= post.test_result_nitrite %></div>
-            <div class="datacontainer" id="container_coliform"><%= post.test_result_coliform %></div>
-            <div class="datacontainer" id="container_arsenic"><%= post.test_result_arsenic %></div>
+            News feed
+          </div>
+          <div class="sectiontitle">Location</div>
+          <div class="sectionwrapper">
+            <div class="datacontainer">
+              {"cholera_o1":<%= post.test_result_cholera_o1||0%>,
+              "cholera_o139":<%= post.test_result_cholera_o139||0%>,
+              "nitrite":<%= post.test_result_nitrite||0%>,
+              "coliform":<%= post.test_result_coliform||0%>,
+              "arsenic":<%= post.test_result_arsenic||0%>}
+            </div>
+            <svg id="grapharea" width="600" height="400"></svg>
+          </div>
+          <div class="sectionwrapper"><%= post.post_content %></div>
+          <div class="sectionwrapper">
+            <% post.images.each do |image| %>
+                <%= image_tag image.file.url(:thumb)%>
+            <% end %>
           </div>
         </div>
       </div>
