--- a/app/assets/stylesheets/main.css.scss
+++ b/app/assets/stylesheets/main.css.scss
@@ -300,6 +300,10 @@ nav {
   display: none;
 }
 
+#post_location {
+  width: 100%;
+}
+
 .formsection {
   overflow-y: scroll;
   overflow-x: hidden;
