--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -5,14 +5,15 @@
           <div class="sectionwrapper">
             News feed
           </div>
-          <div class="sectiontitle">Location</div>
+          <div class="sectiontitle"><%= post.location || "No location" %></div>
           <div class="sectionwrapper">
             <div class="datacontainer">
               {"cholera_o1":<%= post.test_result_cholera_o1||0%>,
               "cholera_o139":<%= post.test_result_cholera_o139||0%>,
               "nitrite":<%= post.test_result_nitrite||0%>,
               "coliform":<%= post.test_result_coliform||0%>,
-              "arsenic":<%= post.test_result_arsenic||0%>}
+              "arsenic":<%= post.test_result_arsenic||0%>,
+              "location":"<%= post.location||'Seattle, WA, United States'%>"}
             </div>
             <svg id="grapharea" width="600" height="400"></svg>
           </div>
