--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -5,6 +5,7 @@
 
 <div id="crossoverlay"></div>
 <div id="boxoverlay"></div>
+<div id="picturebox"></div>
 <div id="map-canvas"/>
 
 <!-- script -->
