--- a/app/views/posts/_form.html.erb
+++ b/app/views/posts/_form.html.erb
@@ -38,30 +38,30 @@
       <div class="testresultbox">
         <div class="testtitleimg mid"><%= image_tag("nitrite.png") %></div>
         <div class="choicegroup">
-            <div class="choicebox" id="nitrite6"><%= f.radio_button :test_result_nitrite, "6" %></div>
-            <div class="choicebox" id="nitrite5"><%= f.radio_button :test_result_nitrite, "5" %></div>
-            <div class="choicebox" id="nitrite4"><%= f.radio_button :test_result_nitrite, "4" %></div>
-            <div class="choicebox" id="nitrite3"><%= f.radio_button :test_result_nitrite, "3" %></div>
-            <div class="choicebox" id="nitrite2"><%= f.radio_button :test_result_nitrite, "2" %></div>
-            <div class="choicebox" id="nitrite1"><%= f.radio_button :test_result_nitrite, "1" %></div>
+            <label><div class="choicebox" id="nitrite6"><%= f.radio_button :test_result_nitrite, "6" %></div></label>
+            <label><div class="choicebox" id="nitrite5"><%= f.radio_button :test_result_nitrite, "5" %></div></label>
+            <label><div class="choicebox" id="nitrite4"><%= f.radio_button :test_result_nitrite, "4" %></div></label>
+            <label><div class="choicebox" id="nitrite3"><%= f.radio_button :test_result_nitrite, "3" %></div></label>
+            <label><div class="choicebox" id="nitrite2"><%= f.radio_button :test_result_nitrite, "2" %></div></label>
+            <label><div class="choicebox" id="nitrite1"><%= f.radio_button :test_result_nitrite, "1" %></div></label>
         </div>
       </div>
     </div>
     <div class="sectionwrapper">
       <div class="testresultbox">
         <div class="testtitleimg mid"><%= image_tag("coliform.png") %></div>
-        <div class="coliformbox" id="coliformblue"><%= f.radio_button :test_result_coliform, "2" %></div>
-        <div class="coliformbox" id="coliformyellow"><%= f.radio_button :test_result_coliform, "1" %></div>
-        <div class="coliformbox" id="coliformnone"><%= f.radio_button :test_result_coliform, "0" %></div>
+        <label><div class="coliformbox" id="coliformblue"><%= f.radio_button :test_result_coliform, "2" %></div></label>
+        <label><div class="coliformbox" id="coliformyellow"><%= f.radio_button :test_result_coliform, "1" %></div></label>
+        <label><div class="coliformbox" id="coliformnone"><%= f.radio_button :test_result_coliform, "0" %></div></label>
       </div>
       <div class="testresultbox">
         <div class="testtitleimg mid"><%= image_tag("arsenic.png") %></div>
-        <div class="choicebox" id="arsenic6"><%= f.radio_button :test_result_arsenic, "6" %></div>
-        <div class="choicebox" id="arsenic5"><%= f.radio_button :test_result_arsenic, "5" %></div>
-        <div class="choicebox" id="arsenic4"><%= f.radio_button :test_result_arsenic, "4" %></div>
-        <div class="choicebox" id="arsenic3"><%= f.radio_button :test_result_arsenic, "3" %></div>
-        <div class="choicebox" id="arsenic2"><%= f.radio_button :test_result_arsenic, "2" %></div>
-        <div class="choicebox" id="arsenic1"><%= f.radio_button :test_result_arsenic, "1" %></div>
+        <label><div class="choicebox" id="arsenic6"><%= f.radio_button :test_result_arsenic, "6" %></div></label>
+        <label><div class="choicebox" id="arsenic5"><%= f.radio_button :test_result_arsenic, "5" %></div></label>
+        <label><div class="choicebox" id="arsenic4"><%= f.radio_button :test_result_arsenic, "4" %></div></label>
+        <label><div class="choicebox" id="arsenic3"><%= f.radio_button :test_result_arsenic, "3" %></div></label>
+        <label><div class="choicebox" id="arsenic2"><%= f.radio_button :test_result_arsenic, "2" %></div></label>
+        <label><div class="choicebox" id="arsenic1"><%= f.radio_button :test_result_arsenic, "1" %></div></label>
       </div>
     </div>
     <div class="sectiontitle">Location</div>
