--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -6,6 +6,7 @@
 <div id="crossoverlay"></div>
 <div id="boxoverlay"></div>
 <div id="picturebox"></div>
+<div id="closebutton">X</div>
 <div id="map-canvas"/>
 
 <!-- script -->
