--- a/app/views/posts/my.html.erb
+++ b/app/views/posts/my.html.erb
@@ -1,25 +1,42 @@
-<h1>Listing my posts</h1>
+<div id="fullpage">
+  <div class="section">
+    <div class="mypostsection">
+      <div class="mypostscroll">
+        <% @posts.each do |post| %>
+            <div class="mypostrow">
+              <div class="mypostinfo">
+                <div class="mypostlocation"><%= post.location || "No location" %></div>
+                <div class="mypostdate"><%= l(post.created_at, :format => "%m/%d/%Y") %></div>
+              </div>
+              <div class="myposticon">
 
-<table>
-  <thead>
-    <tr>
-      <th colspan="3"></th>
-    </tr>
-  </thead>
+                <% if (post.test_result_arsenic > 3) %>
+                    <div class="icon iconfloat icon6b"></div>
+                <% else %>
+                    <div class="icon iconfloat icon6w"></div>
+                <% end %>
 
-  <tbody>
-  <%= render 'layouts/messages' %>
-    <% @posts.each do |post| %>
-      <tr>
-        <td><%= post.post_content %></td>
-        <td><%= link_to 'Show', post %></td>
-        <td><%= link_to 'Edit', edit_post_path(post) %></td>
-        <td><%= link_to 'Destroy', post, method: :delete, data: { confirm: 'Are you sure?' } %></td>
-      </tr>
-    <% end %>
-  </tbody>
-</table>
+                <% if (post.test_result_coliform != 0)  %>
+                    <div class="icon iconfloat icon5b"></div>
+                <% else %>
+                    <div class="icon iconfloat icon5w"></div>
+                <% end %>
 
-<br>
+                <% if (post.test_result_nitrite > 3) %>
+                    <div class="icon iconfloat icon4b"></div>
+                <% else %>
+                    <div class="icon iconfloat icon4w"></div>
+                <% end %>
 
-<%= link_to 'New Post', new_post_path %>
+                <% if (post.test_result_cholera_o1 != 0 ) ||  (post.test_result_cholera_o139 != 0 ) %>
+                    <div class="icon iconfloat icon3b"></div>
+                <% else %>
+                    <div class="icon iconfloat icon3w"></div>
+                <% end %>
+              </div>
+            </div>
+        <% end %>
+      </div>
+    </div>
+  </div>
+</div>
