--- a/app/assets/stylesheets/main.css.scss
+++ b/app/assets/stylesheets/main.css.scss
@@ -36,15 +36,25 @@ nav {
   z-index: 1001;
 }
 
-#logo {
-  margin-left: 10px;
-  margin-top: 10px;
-  float: left;
+.logocontainer {
+  position: fixed;
+  top: 40px;
+  left: 20px;
+  z-index: 300;
+}
+
+.logotitle {
+  font-size: 12pt;
+  font-weight: bold;
+}
+
+.logosubtitle {
+  font-size: 8pt;
 }
 
 .navmid{
-  width: 1024px;
-  height: 50px;
+  width: 1400px;
+  height: 40px;
   margin-left: auto;
   margin-right: auto;
   margin-top: 0px;
@@ -61,7 +71,7 @@ nav {
   right: 0px;
   height: 40px;
   padding: 8px;
-  font-size: 24pt;
+  font-size: 18pt;
   background-color: rgba(255,255,255,0.4);
 }
 
@@ -119,6 +129,32 @@ nav {
   vertical-align: middle;
 }
 
+#searchbox {
+  width: 100%;
+  font-size: 16pt;
+}
+
+.filterrow {
+  width: 100%;
+  height: 40px;
+  margin-bottom: 8px;
+  padding-left: 14px;
+}
+
+.filterbutton {
+  width: 19%;
+  height: 40px;
+  float: left;
+  background-repeat: no-repeat;
+  background-position: center;
+  box-sizing:border-box;
+  cursor: pointer;
+}
+
+.rightedge{
+  border-right: 1px solid $primary-color;
+}
+
 #closebutton {
   cursor: pointer;
   width: 40px;
@@ -156,10 +192,10 @@ nav {
 
 .navmid li {
   color: $primary-color;
-  font-size: 24pt;
+  font-size: 18pt;
   list-style-type: none;
-  width: 300px;
-  height: 40px;
+  width: 400px;
+  height: 30px;
   padding: 8px;
   float: left;
   background-color: rgba(255,255,255,0.4);
@@ -386,6 +422,10 @@ nav {
 .mypostrow {
   width: 100%;
   height: 80px;
+}
+
+.mypostrow:hover {
+  cursor: pointer;
 }
 
 .mypostrow:nth-child(even) {
