--- a/app/views/home/list.html.erb
+++ b/app/views/home/list.html.erb
@@ -2,10 +2,14 @@
  <%= javascript_include_tag 'homemap' %>
  <%= javascript_include_tag 'topojson.v1.min' %>
 <% end %>
-
 <div id="crossoverlay"></div>
 <div id="boxoverlay"></div>
 <div id="picturebox"></div>
 <div id="closebutton">X</div>
 <div id="map-canvas"/>
 
+
+
+<script>
+    loadPostUrl(<%= @highid %>);
+</script>
