--- a/app/views/layouts/_navigation_links.html.erb
+++ b/app/views/layouts/_navigation_links.html.erb
@@ -16,6 +16,6 @@
     <li><%= link_to 'Posts', posts_path %></li>
 <% end %>-->
 
-<li><%= link_to 'News', posts_path %></li>
-<li><%= link_to 'New post', new_post_path %></li>
-<li><%= link_to 'My posts', posts_my_path %></li>
+<li><%= link_to 'NEWS FEED', posts_path %></li>
+<li><%= link_to 'NEW POST', new_post_path %></li>
+<li><%= link_to 'MY POST', posts_my_path %></li>
