--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title><%= content_for?(:title) ? yield(:title) : "Back Water02" %></title>
+    <title>Quadrop</title>
     <meta name="description" content="<%= content_for?(:description) ? yield(:description) : "Back Water02" %>">
     <%= stylesheet_link_tag 'application', media: 'all', 'data-turbolinks-track' => true %>
     <%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
@@ -11,9 +11,15 @@
   </head>
   <body>
     <%= render 'layouts/navigation' %>
-
+    <div class="logocontainer">
+      <%= image_tag("logo.png", :alt => "home image", :title => "Click here to return to Home", :id => "logo") %>
+      <div class="logotitle">QUADROP</div>
+      <div class="logosubtitle">
+        P.O. Box 123456<br/>
+        Seattle, WA 98000<br/>
+        www.quadrop.org</div>
+    </div>
     <main role="main">
-   
        <%= yield %>
     </main>
   </body>
